Switching dependency from HtmlAgilityPack to cloudscribe.HtmlAgilityPack. Switching from .NET Core 1.1 to .NET Core 1.0. This change reduces the minimum .NETStandard version from 1.6.1 to 1.6.0, enabling this library to be used on AWS Lambda (including as a dependency for an Alexa skill).

--- a/src/HotsLogsScraper/HotsLogsScraper.csproj
+++ b/src/HotsLogsScraper/HotsLogsScraper.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.5.1" />
+    <PackageReference Include="cloudscribe.HtmlAgilityPack" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
